# lambda-grpc-web

./: Cargo.toml  README.md
examples/hello-world/: Cargo.toml
examples/hello-world/proto/: hello_world.proto
examples/hello-world/src/: main.rs
examples/server-streaming/: Cargo.toml  build.rs
examples/server-streaming/proto/: stream_hello_world.proto
examples/server-streaming/src/: main.rs
integration/: Cargo.toml  build.rs
integration/proto/: integration.proto
integration/src/: auth_interceptor.rs  integration.proto  log_layer.rs  main.rs  meta_echo_layer.rs
integration/tests/: integration.rs
src/: deadline_layer.rs  grpc_lambda_layer.rs  lambda_server_builder.rs  lib.rs  wire_log.rs
