[workspace]
members = [
    ".",
    "examples/hello-world", "examples/server-streaming", "integration",
]

[package]
name = "lambda-grpc-web"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/zakhenry/lambda-grpc-web"
description = "grpc-web framed tonic service adaptor to aws lambda runtime"

[lib]
name = "lambda_grpc_web"
path = "src/lib.rs"

[features]
default = ["catch-panic", "deadline"]
catch-panic = []
deadline = []
wire-log = ["dep:http-body", "dep:http-body-util", "dep:bytes"]

[dependencies]
lambda_http = { version = "1.0.1", features = ["apigw_http"] }
lambda_runtime = "1.0.1"
tonic = "0.14.2"
tonic-web = "0.14.2"
tower-http = { version = "0.6.8", features = ["catch-panic"] }
tower = "0.5.2"
tokio = "1.48.0"
http = "1.4.0"
axum = "0.8.8"

http-body = { version = "1.0.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }
bytes = { version = "1.11.0", optional = true }

[dev-dependencies]

[patch.crates-io]
#tonic-web = { path = "../tonic/tonic-web" }
#tonic = { path = "../tonic/tonic"}
# revert when https://github.com/hyperium/tonic/pull/2474 is merged
tonic-web = { git = "https://github.com/zakhenry/tonic", rev = "c3d84d77db4803ef54948aab4fe97c67150329ce" }
tonic = { git = "https://github.com/zakhenry/tonic", rev = "c3d84d77db4803ef54948aab4fe97c67150329ce" }
