[package]
name = "integration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
lambda-grpc-web = {path = "../", default-features = true, features = ["wire-log"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
hyper-util = "0.1.19"
prost = "0.14.1"
tonic = "0.14.2"
tonic-web = "0.14.2"
tonic-prost = "0.14.2"
tower = "0.5.2"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = "1.8.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


[dev-dependencies]
hyper-util = {  version = "0.1.19" }
hyper-rustls = { version = "0.27.7", features = ["rustls-platform-verifier"] }
rustls = "0.23.35"
test-context = "0.4.1"
dotenvy_macro = "0.15.7"

[build-dependencies]
tonic-prost-build = "0.14.2"
