[package]
name = "example-server-streaming"
version = "0.1.0"
edition = "2024"


[dependencies]
lambda-grpc-web = {path = "../../"}
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tonic-web = "0.14.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }


[dev-dependencies]
hyper-util = {  version = "0.1.19" }
hyper-rustls = { version = "0.27.7", features = ["rustls-platform-verifier"] }
rustls = "0.23.35"

[build-dependencies]
tonic-prost-build = "*"
